# evm_server_cpp

./: CMakeLists.txt  evm_request_processor.cpp  evm_request_processor.h  evm_tx_executor.cpp  evm_tx_executor.h  fields_alloc.hpp  help.html  help_message.cpp  help_message.h  http_server.cpp  http_server.h  main.cpp  readme.md
state/: state.cpp  state.hpp
test/: call_contract.sh  create_contract.sh
test/msgs/: call_contract.json  create_contract.json  query_contract.json
